--- a/JeffSite_WF_472/Views/Configuracao/Index.cshtml
+++ b/JeffSite_WF_472/Views/Configuracao/Index.cshtml
@@ -14,7 +14,52 @@
     </div>
 }
 
-<form asp-action="Edit" enctype="multipart/form-data">
+@using (Html.BeginForm("Edit", "Configuracao", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.EditorFor(model => model.Cod, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.ContactEmail)</label>
+        @Html.EditorFor(model => model.ContactEmail, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.ContactEmail)
+    </div>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.NomeSite)</label>
+        @Html.EditorFor(model => model.NomeSite, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.NomeSite)
+    </div>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.UrlSite)</label>
+        @Html.EditorFor(model => model.UrlSite, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.UrlSite)
+    </div>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.ImgProfile)</label>
+        @Html.EditorFor(model => model.ImgProfile, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
+        <small>Dimensão 300px de altura - Nome da imagem devera ser <b>ImgProfile.jpg</b></small>
+        @if (!string.IsNullOrEmpty(ViewBag.FileNameProfileErro))
+        {
+            <span class="text-danger">@ViewBag.FileNameLogoErro</span>
+        }
+    </div>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.ImgLogo)</label>
+        @Html.EditorFor(model => model.ImgLogo, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
+        <small>Dimensão 300px de altura - Nome da imagem devera ser <b>ImgLogo.jpg</b></small>
+        @if (!string.IsNullOrEmpty(ViewBag.FileNameProfileErro))
+        {
+            <span class="text-danger">@ViewBag.FileNameProfileErro</span>
+        }
+    </div>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.UrlMercadoLivre)</label>
+        @Html.EditorFor(model => model.UrlMercadoLivre, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        <small>Nao esqueça do HTTP no endereço</small>
+    </div>
+    @Html.ActionLink("Voltar", "Index", "AdminHome")
+    <button class="btn btn-primary" type="submit">Salvar</button>
+}
+
+<!--<form asp-action="Edit" enctype="multipart/form-data" method="post">
     <input type="hidden" class="form-control" asp-for="Cod" readonly>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ContactEmail)</label>
@@ -33,9 +78,9 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ImgLogo)</label>
         <input type="file" accept="image/*" class="form-control" asp-for="ImgLogo">
-        <small>Dimensão máxima  200px x 200px - Nome da imagem devera ser <b>ImgLogo.jpg</b></small>
-        @* <input type="text" class="form-control" asp-for="ImgLogo"> *@
-        @if (!string.IsNullOrEmpty(ViewBag.FileNameLogoErro))
+        <small>Dimensão máxima  200px x 200px - Nome da imagem devera ser <b>ImgLogo.jpg</b></small>-->
+@* <input type="text" class="form-control" asp-for="ImgLogo"> *@
+<!--@if (!string.IsNullOrEmpty(ViewBag.FileNameLogoErro))
         {
             <span class="text-danger">@ViewBag.FileNameLogoErro</span>
         }
@@ -55,5 +100,5 @@
         <small>Nao esqueça do HTTP no endereço</small>
     </div>
     <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
-    <button class="btn btn-info">Salvar</button>
-</form>
+    <button class="btn btn-info" type="submit">Salvar</button>
+</form>-->
