--- a/JeffSite_WF_472/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite_WF_472/Views/Shared/_LayoutAdmin.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"]Administrador - Autor JP</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/bootstrap")*@
     @Scripts.Render("~/bundles/modernizr")
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
