--- a/JeffSite_WF_472/Views/Configuracao/Index.cshtml
+++ b/JeffSite_WF_472/Views/Configuracao/Index.cshtml
@@ -38,16 +38,16 @@
         <small>Dimensão 300px de altura - Nome da imagem devera ser <b>ImgProfile.jpg</b></small>
         @if (!string.IsNullOrEmpty(ViewBag.FileNameProfileErro))
         {
-            <span class="text-danger">@ViewBag.FileNameLogoErro</span>
+            <span class="text-danger">@ViewBag.FileNameProfileErro</span>
         }
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ImgLogo)</label>
         @Html.EditorFor(model => model.ImgLogo, new { htmlAttributes = new { @class = "form-control", type = "file", accept = "image/*" } })
         <small>Dimensão 300px de altura - Nome da imagem devera ser <b>ImgLogo.jpg</b></small>
-        @if (!string.IsNullOrEmpty(ViewBag.FileNameProfileErro))
+        @if (!string.IsNullOrEmpty(ViewBag.FileNameLogoErro))
         {
-            <span class="text-danger">@ViewBag.FileNameProfileErro</span>
+            <span class="text-danger">@ViewBag.FileNameLogoErro</span>
         }
     </div>
     <div class="form-group">
@@ -59,46 +59,7 @@
     <button class="btn btn-primary" type="submit">Salvar</button>
 }
 
-<!--<form asp-action="Edit" enctype="multipart/form-data" method="post">
-    <input type="hidden" class="form-control" asp-for="Cod" readonly>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.ContactEmail)</label>
-        <input type="text" class="form-control" asp-for="ContactEmail">
-        <span asp-validation-for="ContactEmail" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.NomeSite)</label>
-        <input type="text" class="form-control" asp-for="NomeSite">
-    </div>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.UrlSite)</label>
-        <input type="text" class="form-control" asp-for="UrlSite">
-        <small>Nao esqueça do HTTP no endereço</small>
-    </div>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.ImgLogo)</label>
-        <input type="file" accept="image/*" class="form-control" asp-for="ImgLogo">
-        <small>Dimensão máxima  200px x 200px - Nome da imagem devera ser <b>ImgLogo.jpg</b></small>-->
-@* <input type="text" class="form-control" asp-for="ImgLogo"> *@
-<!--@if (!string.IsNullOrEmpty(ViewBag.FileNameLogoErro))
-        {
-            <span class="text-danger">@ViewBag.FileNameLogoErro</span>
-        }
-    </div>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.ImgProfile)</label>
-        <input type="file" accept="image/*" class="form-control" asp-for="ImgProfile">
-        <small>Dimensão 300px de altura - Nome da imagem devera ser <b>ImgProfile.jpg</b></small>
-        @if (!string.IsNullOrEmpty(ViewBag.FileNameProfileErro))
-        {
-            <span class="text-danger">@ViewBag.FileNameProfileErro</span>
-        }
-    </div>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.UrlMercadoLivre)</label>
-        <input type="text" class="form-control" asp-for="UrlMercadoLivre">
-        <small>Nao esqueça do HTTP no endereço</small>
-    </div>
-    <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
-    <button class="btn btn-info" type="submit">Salvar</button>
-</form>-->
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
