--- a/JeffSite_WF_472/Views/Configuracao/confEmail.cshtml
+++ b/JeffSite_WF_472/Views/Configuracao/confEmail.cshtml
@@ -7,38 +7,46 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-@if(ViewBag.Message != null){
+@if (ViewBag.Message != null)
+{
     <div class="alert alert-success" role="alert">
-        @ViewBag.Message 
+        @ViewBag.Message
     </div>
 }
 
-<form asp-action="confEmail" method="POST">
-    <input type="hidden" class="form-control" asp-for="Id" readonly>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
+@using (Html.BeginForm("confEmail", "Configuracao", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", type = "hidden", @readonly = "readonly" } })
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Servidor)</label>
-        <input type="text" class="form-control" asp-for="Servidor">
-        <span asp-validation-for="Servidor" class="text-danger"></span>
+        @Html.EditorFor(model => model.Servidor, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.Servidor)
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Porta)</label>
-        <input type="number" class="form-control" asp-for="Porta">
-        <span asp-validation-for="Porta" class="text-danger"></span>
+        @Html.EditorFor(model => model.Porta, new { htmlAttributes = new { @class = "form-control", type = "number" } })
+        @Html.ValidationMessageFor(x => x.Porta)
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ContaEmail)</label>
-        <input type="text" class="form-control" asp-for="ContaEmail">
-        <span asp-validation-for="ContaEmail" class="text-danger"></span>
+        @Html.EditorFor(model => model.ContaEmail, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.ContaEmail)
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Senha)</label>
-        <input type="text" class="form-control" asp-for="Senha">
-        <span asp-validation-for="Senha" class="text-danger"></span>
+        @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", type = "text" } })
+        @Html.ValidationMessageFor(x => x.Senha)
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.HabilitaSSL)</label>
-        <input type="checkbox" class="form-control" asp-for="HabilitaSSL">
+        @Html.EditorFor(model => model.HabilitaSSL, new { htmlAttributes = new { @class = "form-control", type = "checkbox" } })
+        @Html.ValidationMessageFor(x => x.HabilitaSSL)
     </div>
-    <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
-    <button class="btn btn-info">Salvar</button>
-</form>
+    @Html.ActionLink("Voltar", "Index", "AdminHome")
+    <button class="btn btn-primary" type="submit">Salvar</button>
+}
